@@ -31,7 +31,7 @@ Description: Ubuntu Packaging Guide - metapackage
  ubuntu-packaging-guide-html.
 
 Package: ubuntu-packaging-guide-html
-Depends: libjs-jquery (>= 1.6.1), libjs-underscore, ${misc:Depends}
+Depends: libjs-sphinxdoc, ${misc:Depends}
 Architecture: all
 Description: Ubuntu Packaging Guide - HTML guide
  The Ubuntu Packaging Guide is a set of articles that should help you to get
@@ -55,7 +55,7 @@ Description: Ubuntu Packaging Guide - PDF guide
  This package contains the PDF version of the guide.
 
 Package: ubuntu-packaging-guide-epub
-Depends: libjs-jquery (>= 1.6.1), libjs-underscore, ${misc:Depends}
+Depends: libjs-sphinxdoc, ${misc:Depends}
 Architecture: all
 Description: Ubuntu Packaging Guide - EPUB guide
  The Ubuntu Packaging Guide is a set of articles that should help you to get
